Corregits errors menors

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -570,6 +570,7 @@
 	\subfile{parts/EDOS1.tex}
 	\subfile{parts/Galois.tex}
 	\subfile{parts/Complexa.tex}
+	\subfile{parts/Estadistica.tex}
 	\subfile{parts/GeoDiferencial.tex}
 	\subfile{parts/EDOS2.tex}
 \end{document} %WEB TO' MOLONA: http://www-history.mcs.st-and.ac.uk/BiogIndex.html
