--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -464,7 +464,7 @@
 			i per tant, per la definició de \myref{def:successió de Cauchy amb normes} trobem que la successió \((f^{i+1}_{n_{i+1}+n})_{n\in\mathbb{N}}\) és de Cauchy per a tot \(i\) natural, i com que pel Teorema \myref{thm:l'espai de funcions contínues i acotades és complet} tenim que \(\mathcal{C}_{b}(X,T)\) és un espai complet, i per la \myref{thm:condició de Cauchy per successions de funcions} trobem que la parcial \((f^{i+1}_{n_{i+1}+n})_{n\in\mathbb{N}}\) és uniformement convergent.
 		\end{proof}
 	\end{lemma}
-	\begin{theorem}[Teorema Peano]
+	\begin{theorem}[Teorema de Peano]
 		\labelname{Teorema de Peano}\label{thm:Teorema de Peano}
 		Siguin \(a\) i \(b\) dos reals positius i
 		\begin{equation}
