Afegida teoria a anàlisi complex

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -160,6 +160,9 @@
 \DeclareMathOperator{\Gal}{Gal}
 \DeclareMathOperator{\ReticleGrup}{\mathcal{L}}
 \DeclareMathOperator{\ReticleCos}{\mathcal{L}}
+\DeclareMathOperator{\Arg}{Arg}
+\DeclareMathOperator{\Disc}{D}
+\DeclareMathOperator{\Hol}{Hol}
 
 \DeclareMathOperator*{\suport}{Supp}
 
